# ferrish

./: .gitignore  Cargo.toml  LICENSE  README.md  sync_common.sh  sync_pr.sh  sync_to_main.sh
ferrish/: Cargo.toml
src/: main.rs
