[package]
name = "ferrish"
version = "0.1.0"
edition = "2024"
authors = ["Carson Price <cdprice02@users.noreply.github.com>"]
description = "Ferrish is a modern, Rust-powered shell focused on safety, performance, and a clean interactive experience."
repository = "https://github.com/cdprice02/ferrish"
license = "MIT"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
is_executable = "1.0.5"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "1.0.38"                             # error handling
