[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
is_executable = "1.0.5"
soft-canonicalize = { version = "0.5.4", features = ["dunce"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "1.0.38"
